# HPC-Radix-Sort-Optimization

./: CUDA_trace.txt  LICENSE  MPI_trace.txt  OMP_trace.txt  README.md
CUDA_code/HPC_CUDA/: ConfrontoComplessivoStreams.xlsx  CudaProject.ipynb  Global.cu  NumberOfMeasuresCuda.xlsx  Shared.cu  StreamsGlobal.cu  StreamsShared.cu  StreamsTexture.cu  Texture.cu
CUDA_code/HPC_CUDA/global_memory/: Global_measures.xlsx  Streams_Global_measure.xlsx
CUDA_code/HPC_CUDA/shared_memory/: Shared_measures.xlsx  Streams_Shared_measure.xlsx
CUDA_code/HPC_CUDA/texture_memory/: Streams_Texture_measure.xlsx  Texture_measures.xlsx
Message_Passing_Interface_code/MPI/: CMakeLists.txt  Pipfile
Message_Passing_Interface_code/MPI/include/: RadixSort.h  RadixSortSeq.h
Message_Passing_Interface_code/MPI/measurements/: analysis.bash  extract.py
Message_Passing_Interface_code/MPI/measurements/measures/: ALGORITHM-1.rar
Message_Passing_Interface_code/MPI/src/: RadixSort.c  RadixSortSeq.c  WriteVectOnFile.c  main.c  sequential.c
Message_Passing_Interface_code/MPI/test/: testRadixSort.c  testReadWriteFile.c
OpenMP_code/OMP/: CMakeLists.txt
OpenMP_code/OMP/include/: RadixSort.h
OpenMP_code/OMP/measurements/: analysis.bash  extract.py
OpenMP_code/OMP/src/: RadixSort.c  main.c
